# RAG-APP

./: .gitignore  README.md  main.py  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
app/: custom_types.py  data_loader.py  main.py  vector_db.py
docs/: API.md  ARCHITECTURE.md  DECISIONS.md  DEPLOYMENT.md  OPERATIONS.md  ROADMAP.md  SETUP.md
