[project]
name = "ragproducitonapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "fastembed>=0.8.0",
    "inngest>=0.5.18",
    "llama-index-core>=0.14.22",
    "llama-index-readers-file>=0.6.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
